# ToDo-app

./: README.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
history/prompts/001-cli-todo/: PHR-001-cli-todo-green-001-implementation-kickoff.md  PHR-003-phase-i-cli-plan.prompt.md  (+1 more)
phase1-cli/: .gitignore  CHANGELOG.md  CLAUDE.md  INTERACTIVE_MODE.md  QUICKSTART.md  README.md  RELEASE_SUMMARY.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  run_todo.bat  run_todo.sh
phase1-cli/scripts/: demo.py  interactive_demo.py
phase1-cli/src/todo_app/: __init__.py  __main__.py  interactive.py  launch.py
phase1-cli/src/todo_app/application/: exceptions.py
phase1-cli/src/todo_app/application/dto/: __init__.py  task_dto.py  task_filter.py
phase1-cli/src/todo_app/application/interfaces/: __init__.py  task_repository.py
phase1-cli/src/todo_app/application/use_cases/: add_task.py  delete_task.py  list_tasks.py  toggle_task.py  update_task.py
phase1-cli/src/todo_app/domain/: exceptions.py
phase1-cli/src/todo_app/domain/entities/: __init__.py  task.py
phase1-cli/src/todo_app/domain/enums/: task_status.py
phase1-cli/src/todo_app/domain/value_objects/: __init__.py  task_description.py  task_id.py  task_title.py
phase1-cli/src/todo_app/infrastructure/cli/: __init__.py  app.py
phase1-cli/src/todo_app/infrastructure/cli/commands/: __init__.py
phase1-cli/src/todo_app/infrastructure/cli/formatters/: __init__.py  message_formatter.py  table_formatter.py
phase1-cli/src/todo_app/infrastructure/config/: __init__.py
phase1-cli/src/todo_app/infrastructure/logging/: __init__.py
phase1-cli/src/todo_app/infrastructure/persistence/: __init__.py  in_memory_repository.py
phase1-cli/tests/: conftest.py
phase1-cli/tests/acceptance/: __init__.py
phase1-cli/tests/integration/: __init__.py
phase1-cli/tests/unit/domain/: __init__.py  test_task_description.py  test_task_entity.py  test_task_id.py  test_task_status.py  test_task_title.py
phase1-cli/tests/unit/infrastructure/: test_in_memory_repository.py
specs/001-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+4 files in other folders)
